[package]
name = "avr-bme280"
version = "0.1.0"
authors = ["jacksonn97 <jackson.n.97@proton.me>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jacksonn97/avr-bme280"
homepage = "https://github.com/jacksonn97/avr-bme280"

[dependencies]
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
